--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "python.testing.pytestArgs": [
-        "."
+        "homework 28.12.2023"
     ],
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true
